Fixed icon and text alignment

--- a/css/article.css
+++ b/css/article.css
@@ -21,10 +21,6 @@
   margin-top: 10px;
 }
 
-.article-icon {
-  margin-right: 5px;
-}
-
 .nav {
   color: #163F67;
   font-weight: 700 !important;
