--- a/css/index.css
+++ b/css/index.css
@@ -65,6 +65,7 @@ a {
 
 .article-icon {
   width: 20px;
+  margin-right: 5px;
 }
 
 .article-icon-label {
